--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,120 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+.content-wrapper {
+  width: 90%;
+ 
+}
+
+
+/* -------- Base header/footer styles -------- */
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* -------------- MOBILE STYLES -------------- */
+
+/* =========== Homepage =========== /
+
+/* Hero Area */
+
+.hero-area {
+ display: flex;
+  justify-content: center;
+}
+
+
+/* Aside */
+
+aside {
+ display: flex;
+  justify-content: center;
+}
+
+
+/* Features */
+
+.features {
+ display: flex;
+  justify-content: center;
+}
+
+.features .features-items {
+ display: flex;
+justify-content: center;
+}
+
+
+
+/* Reviews */
+
+.reviews {
+ display: flex;
+  justify-content: center;
+}
+
+
+/* =========== About Page ========== */
+
+.mission {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-section {
+   display: flex;
+  justify-content: center;
+}
+
+
+
+/* =========== FAQ page =========== */
+.faq {
+   display: flex;
+  justify-content: center;
+}
+
+.faq .content-wrapper {
+   display: flex;
+  justify-content: center;
+}
+
+
 
 /* ==========================================================================
    Helper classes
@@ -260,4 +374,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
