--- a/css/main.css
+++ b/css/main.css
@@ -111,8 +111,13 @@ header .content-wrapper {
   margin: 15px 0 10px;
 }
 
-figure {
+header figure {
   margin: 0;
+  width: 60%;
+}
+
+header figure img {
+  width: 100%;
 }
 
 .header-divider {
@@ -137,6 +142,7 @@ width: 100%;
 footer {
   display: flex;
   flex-direction: column;
+  
   align-items: center;
   text-align: center;
 }
@@ -145,7 +151,7 @@ footer {
 footer .content-wrapper {
   width: 55%;
 }
-
+ 34
 footer h4 {
   margin: 20px 0;
 }
@@ -231,16 +237,14 @@ aside .form input[type="button"] {
 
 .features .features-items {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+   align-items: flex-start;
   flex-flow: row wrap;
-
   text-align: center;
-
-  margin: 30px 0;
+  justify-content: space-evenly;
   width: 100%;
 }
 .features article {
+  margin: 30px 0;
   width: 63%;
 }
 
@@ -262,6 +266,14 @@ aside .form input[type="button"] {
   margin-bottom: 40px;
 }
 
+.reviews figure {
+  width: 100%;
+  margin: 0;
+}
+.reviews img {
+  width: 100%;
+}
+
 .reviews h3 {
   margin: 20px 0;
   width: 55%;
@@ -280,6 +292,7 @@ aside .form input[type="button"] {
   display: flex;
   justify-content: center;
 }
+
 
 .contact-content p {
   margin: 0;
@@ -395,16 +408,14 @@ aside .form input[type="button"] {
    ========================================================================== */
 
 @media screen and (min-width: 768px) {
-/*Tablet styles here*/
+
+/* ======== Tablet styles here ======== */
 .content-wrapper {
   max-width: 640px;
   margin: 100px 0;
 } 
 
 /* Header */
-.header-divider {
-  display: none;
-}
 
 header {
 padding: 33px 0;
@@ -413,6 +424,18 @@ header .content-wrapper {
 width: 100%;
 justify-content: space-between;
 }
+
+header .content-wrapper figure {
+  max-width: 30%;
+}
+header .content-wrapper figure img {
+  width: 100%;
+}
+
+.header-divider {
+  display: none;
+}
+
 header nav {
   width: 20%;
 }
@@ -451,17 +474,12 @@ aside .form {
 .features h2 {
   padding-bottom: 20px;
 }
-.features .features-items {
-width: 35%;  
-  
-}
 
 .features article {
-
 display: flex;
 align-items: center;
 flex-flow: row wrap;
-flex-basis: 100%;
+flex-basis: 35%;
 }
 
 .features .fontawesome-icon {
@@ -472,6 +490,25 @@ flex-basis: 100%;
 .reviews h2 {
   width: 80%;
 }
+
+.reviews .reviews-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.reviews figure {
+  width: 50%;
+}
+
+.reviews img {
+  width: 100%;
+}
+.reviews article {
+  width: 49%;
+}
+
+
+
 
 /* Footer */
 footer .content-wrapper {
@@ -538,7 +575,76 @@ flex-flow: row wrap;
 
 
 @media screen and (min-width: 1200px) {
-/*Desktop styles here*/
+/* ======== Desktop styles here ======== */
+.content-wrapper {
+  max-width: 960px;
+  margin: 100px 0;
+} 
+
+/* Header */
+header {
+padding: 15px 0;
+}
+
+
+/* Hero area */
+
+.hero-area h1 {
+  width: 70%;
+}
+
+/* Aside */
+aside .content-wrapper {
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+}
+aside .content-wrapper div {
+  width: 30%;
+}
+
+/* Features section */
+.features .content-wrapper {
+  justify-content: center;
+}
+.features h2 {
+ width: 100%;
+}
+.features .features-items {
+  justify-content: space-around;
+  flex-flow: row wrap;
+  flex-basis: 80%;
+}
+.features article {
+  flex-basis: 25%;
+  margin: 30px 15px;
+}
+
+/* Reviews section */
+.reviews h2 {
+  width: 100%;
+  margin: 0 0 50px 0;
+}
+
+
+.reviews article {
+  width: 45%;
+}
+
+/* Footer */
+footer .footer-contact {
+  justify-content: space-between;
+}
+
+footer .contact,
+footer .social {
+ width: 20%;
+}
+
+/* About page */
+.contact-section address {
+  width: 35%;
+}
+
 
 }
 
